--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,9 @@
 <footer class="center">
   <div class="measure">
     <small>
-      Theme crafted with &lt;3 by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).<br>
-      &lt;/&gt; available on <a href="https://github.com/johnotander/pixyll">Github</a>.
+      {% if site.twitter_username %}
+          Varun can always be reached at <meta name="twitter:site" content="@{{ site.twitter_username }}" />
+      {% endif %}
     </small>
   </div>
 </footer>
@@ -11,4 +12,5 @@
 <script>
     anchors.options.visible = 'always';
     anchors.add('article h2, article h3, article h4, article h5, article h6');
-</script>{% endif %}
+</script>
+{% endif %}
