Fix the footer. I needed 'a' but typed 'meta' :)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="measure">
     <small>
       {% if site.twitter_username %}
-          Varun can always be reached at <meta name="twitter:site" content="@{{ site.twitter_username }}" />
+          Varun can always be reached at <a href="https://twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a>
       {% endif %}
     </small>
   </div>
